tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2365: Operator '==' cannot be applied to types 'Symbol' and 'Boolean'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2365: Operator '!=' cannot be applied to types 'Number' and 'Symbol'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2365: Operator '===' cannot be applied to types 'Symbol' and 'Number'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2365: Operator '!==' cannot be applied to types 'Boolean' and 'Symbol'.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'Symbol' and 'Boolean'.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'Number' and 'Symbol'.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'Symbol' and 'Number'.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'Boolean' and 'Symbol'.